--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Angular12material</title>
+    <title>ALLWEB RMS</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://media-exp1.licdn.com/dms/image/C510BAQHSRDS2FyTrGw/company-logo_200_200/0?e=2159024400&v=beta&t=7CyL0FiiVhet2tgUdWctGUcoWy7nFKF7Wkgz6iNepB0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
